test/src/e2e_vm_tests/test_programs/should_fail/recover_problem_in_different_file/src/main.sw
script;

dep foo;
dep bar;
dep baz;
dep no_such_file;

fn main() {}
